# research_git

./: .gitignore  B  README  mission1.cpp  mission3
openfoam/lipinski/calculation/: darcyMethod  darcyMethod.cpp  lipinski  lipinski.cpp
openfoam/lipinski/cases/packedBedFlow/0/: T.air  U.water  p  p_rgh
openfoam/lipinski/cases/packedBedFlow/constant/: phaseProperties  thermophysicalProperties.water
openfoam/lipinski/cases/packedBedFlow/system/: controlDict  setFieldsDict  topoSetDict
openfoam/lipinski/cases/packedBedFlow/uniform/: time
openfoam/lipinski/cases/updateLipinskiPacked/0/: T.water  Theta  U.air  alpha.air
research/: CMakeLists.txt
research/applications/: miniLaplacianFoam  miniLaplacianFoam.cpp  miniPipeFlowFoam.cpp
research/notebook/: mesh_view.ipynb  result_1d.ipynb  result_2d.ipynb
research/src/: 2d_cavity_flow.cpp  2d_flow.cpp  cavity
research/src/fields/: volScalarField.cpp  volScalarField.h  volScalarFieldFluid.cpp  volScalarFieldFluid.h
research/src/finiteVolume/: fvm.cpp  fvm.h
research/src/fvMatrix/: fvMatrix.cpp  fvMatrix.h
research/src/fvMesh/: fvCylindricalMesh.cpp  fvCylindricalMesh.h  fvMesh.cpp  fvMesh.h
src/: simulator.py
src/fields/: volScalarField.cpp
src/fvMesh/: test_mesh  test_mesh.cpp
study/: A.cpp  B  B.cpp  C.cpp  D  D.cpp  E  E.cpp  F  F.cpp  G  G.cpp  H  H.cpp  J.cpp  K.cpp  L.cpp  M.cpp  N.cpp  R.cpp  oO.cpp
study/obsidian/: mission1  mission2  mission2.cpp  mission3.cpp  mission4.cpp  mission5  mission5.cpp  mission6  mission6.cpp  test1.cpp
(+105 files in other folders)
